untitled/src/main/java/CParser.java
/* CParser.java */
/* Generated By:JavaCC: Do not edit this line. CParser.java */
import java.util.*;
import syntaxtree.*;
import java.util.Vector;


public class CParser implements CParserConstants {
   private static Set types = new HashSet();
   private static Stack typedefParsingStack = new Stack();
   private static boolean isType(String type)
   {
      return types.contains(type);
   }
   private static void addType(String type)
   {
      types.add(type);
   }
   private static void printTypes()
   {
      for ( Iterator i = types.iterator(); i.hasNext();  )
      {
         System.out.println(i.next());
      }
   }
   public static void main(String args[])
   {
      CParser parser;
      types.add("__signed__");
      types.add("__const");
      types.add("__inline__");
      types.add("__signed");
      if ( args.length == 0 )
      {
         System.out.println("C Parser Version 0.1Alpha:  Reading from standard input . . .");
         parser = new CParser(System.in);
      }
      else
         if ( args.length == 1 )
         {
            System.out.println("C Parser Version 0.1Alpha:  Reading from file " + args[0]+ " . . .");
            try
            {
               parser = new CParser(new java.io.FileInputStream(args[0]));
            }
            catch (java.io.FileNotFoundException e)
            {
               System.out.println("C Parser Version 0.1:  File " + args[0]+ " not found.");
               return;
            }
         }
         else
         {
            System.out.println("C Parser Version 0.1Alpha:  Usage is one of:");
            System.out.println("         java CParser < inputfile");
            System.out.println("OR");
            System.out.println("         java CParser inputfile");
            return;
         }
      try
      {
         parser.TranslationUnit();
         System.out.println("C Parser Version 0.1Alpha:  Java program parsed successfully.");
      }
      catch (ParseException e)
      {
         System.out.println("C Parser Version 0.1Alpha:  Encountered errors during parse.");
         e.printStackTrace();
      }
   }

  static final public TranslationUnit TranslationUnit() throws ParseException {NodeList n0 = new NodeList();
   ExternalDeclaration n1;
    label_1:
    while (true) {
      n1 = ExternalDeclaration();
n0.addNode(n1);
      if (jj_2_1(1)) {
        ;
      } else {
        break label_1;
      }
    }
n0.nodes.trimToSize();
{if ("" != null) return new TranslationUnit(n0);}
    throw new Error("Missing return statement in function");
}

  static final public ExternalDeclaration ExternalDeclaration() throws ParseException {NodeChoice n0;
   Declaration n1;
   FunctionDefinition n2;
    if (jj_2_2(2147483647)) {
      n1 = Declaration();
n0 = new NodeChoice(n1, 0);
    } else if (jj_2_3(1)) {
      n2 = FunctionDefinition();
n0 = new NodeChoice(n2, 1);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new ExternalDeclaration(n0);}
    throw new Error("Missing return statement in function");
}

  static final public FunctionDefinition FunctionDefinition() throws ParseException {NodeOptional n0 = new NodeOptional();
   DeclarationSpecifiers n1;
   Declarator n2;
   NodeOptional n3 = new NodeOptional();
   DeclarationList n4;
   CompoundStatement n5;
    if (jj_2_4(2147483647)) {
      n1 = DeclarationSpecifiers();
n0.addNode(n1);
    } else {
      ;
    }
    n2 = Declarator();
    if (jj_2_5(1)) {
      n4 = DeclarationList();
n3.addNode(n4);
    } else {
      ;
    }
    n5 = CompoundStatement();
{if ("" != null) return new FunctionDefinition(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
}

  static final public Declaration Declaration() throws ParseException {DeclarationSpecifiers n0;
   NodeOptional n1 = new NodeOptional();
   InitDeclaratorList n2;
   NodeToken n3;
   Token n4;
    n0 = DeclarationSpecifiers();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:
    case 61:
    case 65:{
      n2 = InitDeclaratorList();
n1.addNode(n2);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    n4 = jj_consume_token(55);
n3 = JTBToolkit.makeNodeToken(n4);
{if ("" != null) return new Declaration(n0,n1,n3);}
    throw new Error("Missing return statement in function");
}

  static final public DeclarationList DeclarationList() throws ParseException {NodeList n0 = new NodeList();
   Declaration n1;
    label_2:
    while (true) {
      n1 = Declaration();
n0.addNode(n1);
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_2;
      }
    }
n0.nodes.trimToSize();
{if ("" != null) return new DeclarationList(n0);}
    throw new Error("Missing return statement in function");
}

  static final public DeclarationSpecifiers DeclarationSpecifiers() throws ParseException {NodeChoice n0;
   NodeSequence n1;
   StorageClassSpecifier n2;
   NodeOptional n3 = new NodeOptional();
   DeclarationSpecifiers n4;
   NodeSequence n5;
   TypeSpecifier n6;
   NodeOptional n7 = new NodeOptional();
   DeclarationSpecifiers n8;
   NodeSequence n9;
   TypeQualifier n10;
   NodeOptional n11 = new NodeOptional();
   DeclarationSpecifiers n12;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REGISTER:
    case TYPEDEF:
    case EXTERN:
    case STATIC:
    case AUTO:{
n1 = new NodeSequence(2);
      n2 = StorageClassSpecifier();
n1.addNode(n2);
      if (jj_2_7(2147483647)) {
        n4 = DeclarationSpecifiers();
n3.addNode(n4);
      } else {
        ;
      }
n1.addNode(n3);
n0 = new NodeChoice(n1, 0);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_10(1)) {
n5 = new NodeSequence(2);
        n6 = TypeSpecifier();
n5.addNode(n6);
        if (jj_2_8(2147483647)) {
          n8 = DeclarationSpecifiers();
n7.addNode(n8);
        } else {
          ;
        }
n5.addNode(n7);
n0 = new NodeChoice(n5, 1);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VOLATILE:
        case CONST:{
n9 = new NodeSequence(2);
          n10 = TypeQualifier();
n9.addNode(n10);
          if (jj_2_9(2147483647)) {
            n12 = DeclarationSpecifiers();
n11.addNode(n12);
          } else {
            ;
          }
n9.addNode(n11);
n0 = new NodeChoice(n9, 2);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return new DeclarationSpecifiers(n0);}
    throw new Error("Missing return statement in function");
}

  static final public StorageClassSpecifier StorageClassSpecifier() throws ParseException {NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AUTO:{
      n2 = jj_consume_token(AUTO);
n1 = JTBToolkit.makeNodeToken(n2);
n0 = new NodeChoice(n1, 0);
      break;
      }
    case REGISTER:{
      n4 = jj_consume_token(REGISTER);
n3 = JTBToolkit.makeNodeToken(n4);
n0 = new NodeChoice(n3, 1);
      break;
      }
    case STATIC:{
      n6 = jj_consume_token(STATIC);
n5 = JTBToolkit.makeNodeToken(n6);
n0 = new NodeChoice(n5, 2);
      break;
      }
    case EXTERN:{
      n8 = jj_consume_token(EXTERN);
n7 = JTBToolkit.makeNodeToken(n8);
n0 = new NodeChoice(n7, 3);
      break;
      }
    case TYPEDEF:{
      n10 = jj_consume_token(TYPEDEF);
n9 = JTBToolkit.makeNodeToken(n10);
typedefParsingStack.push(Boolean.TRUE);
n0 = new NodeChoice(n9, 4);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new StorageClassSpecifier(n0);}
    throw new Error("Missing return statement in function");
}

  static final public TypeSpecifier TypeSpecifier() throws ParseException {NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   StructOrUnionSpecifier n19;
   EnumSpecifier n20;
   TypedefName n21;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:{
      n2 = jj_consume_token(VOID);
n1 = JTBToolkit.makeNodeToken(n2);
n0 = new NodeChoice(n1, 0);
      break;
      }
    case CHAR:{
      n4 = jj_consume_token(CHAR);
n3 = JTBToolkit.makeNodeToken(n4);
n0 = new NodeChoice(n3, 1);
      break;
      }
    case SHORT:{
      n6 = jj_consume_token(SHORT);
n5 = JTBToolkit.makeNodeToken(n6);
n0 = new NodeChoice(n5, 2);
      break;
      }
    case INT:{
      n8 = jj_consume_token(INT);
n7 = JTBToolkit.makeNodeToken(n8);
n0 = new NodeChoice(n7, 3);
      break;
      }
    case LONG:{
      n10 = jj_consume_token(LONG);
n9 = JTBToolkit.makeNodeToken(n10);
n0 = new NodeChoice(n9, 4);
      break;
      }
    case FLOAT:{
      n12 = jj_consume_token(FLOAT);
n11 = JTBToolkit.makeNodeToken(n12);
n0 = new NodeChoice(n11, 5);
      break;
      }
    case DOUBLE:{
      n14 = jj_consume_token(DOUBLE);
n13 = JTBToolkit.makeNodeToken(n14);
n0 = new NodeChoice(n13, 6);
      break;
      }
    case SIGNED:{
      n16 = jj_consume_token(SIGNED);
n15 = JTBToolkit.makeNodeToken(n16);
n0 = new NodeChoice(n15, 7);
      break;
      }
    case UNSIGNED:{
      n18 = jj_consume_token(UNSIGNED);
n17 = JTBToolkit.makeNodeToken(n18);
n0 = new NodeChoice(n17, 8);
      break;
      }
    case STRUCT:
    case UNION:{
      n19 = StructOrUnionSpecifier();
n0 = new NodeChoice(n19, 9);
      break;
      }
    case ENUM:{
      n20 = EnumSpecifier();
n0 = new NodeChoice(n20, 10);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (isType(getToken(1).image)) {
        n21 = TypedefName();
n0 = new NodeChoice(n21, 11);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return new TypeSpecifier(n0);}
    throw new Error("Missing return statement in function");
}

  static final public TypeQualifier TypeQualifier() throws ParseException {NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONST:{
      n2 = jj_consume_token(CONST);
n1 = JTBToolkit.makeNodeToken(n2);
n0 = new NodeChoice(n1, 0);
      break;
      }
    case VOLATILE:{
      n4 = jj_consume_token(VOLATILE);
n3 = JTBToolkit.makeNodeToken(n4);
n0 = new NodeChoice(n3, 1);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new TypeQualifier(n0);}
    throw new Error("Missing return statement in function");
}

  static final public StructOrUnionSpecifier StructOrUnionSpecifier() throws ParseException {StructOrUnion n0;
   NodeChoice n1;
   NodeSequence n2;
   NodeOptional n3 = new NodeOptional();
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   StructDeclarationList n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
typedefParsingStack.push(Boolean.FALSE);
    n0 = StructOrUnion();
    if (jj_2_11(3)) {
n2 = new NodeSequence(5);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        n5 = jj_consume_token(IDENTIFIER);
n4 = JTBToolkit.makeNodeToken(n5);
n3.addNode(n4);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
n2.addNode(n3);
      n7 = jj_consume_token(56);
n6 = JTBToolkit.makeNodeToken(n7);
n2.addNode(n6);
      n8 = StructDeclarationList();
n2.addNode(n8);
      n10 = jj_consume_token(57);
n9 = JTBToolkit.makeNodeToken(n10);
n2.addNode(n9);
n1 = new NodeChoice(n2, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        n12 = jj_consume_token(IDENTIFIER);
n11 = JTBToolkit.makeNodeToken(n12);
n1 = new NodeChoice(n11, 1);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
typedefParsingStack.pop();
{if ("" != null) return new StructOrUnionSpecifier(n0,n1);}
    throw new Error("Missing return statement in function");
}

  static final public StructOrUnion StructOrUnion() throws ParseException {NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRUCT:{
      n2 = jj_consume_token(STRUCT);
n1 = JTBToolkit.makeNodeToken(n2);
n0 = new NodeChoice(n1, 0);
      break;
      }
    case UNION:{
      n4 = jj_consume_token(UNION);
n3 = JTBToolkit.makeNodeToken(n4);
n0 = new NodeChoice(n3, 1);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new StructOrUnion(n0);}
    throw new Error("Missing return statement in function");
}

  static final public StructDeclarationList StructDeclarationList() throws ParseException {NodeList n0 = new NodeList();
   StructDeclaration n1;
    label_3:
    while (true) {
      n1 = StructDeclaration();
n0.addNode(n1);
      if (jj_2_12(1)) {
        ;
      } else {
        break label_3;
      }
    }
n0.nodes.trimToSize();
{if ("" != null) return new StructDeclarationList(n0);}
    throw new Error("Missing return statement in function");
}

  static final public InitDeclaratorList InitDeclaratorList() throws ParseException {InitDeclarator n0;
   NodeListOptional n1 = new NodeListOptional();
   NodeSequence n2;
   NodeToken n3;
   Token n4;
   InitDeclarator n5;
    n0 = InitDeclarator();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 58:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
n2 = new NodeSequence(2);
      n4 = jj_consume_token(58);
n3 = JTBToolkit.makeNodeToken(n4);
n2.addNode(n3);
      n5 = InitDeclarator();
n2.addNode(n5);
n1.addNode(n2);
    }
n1.nodes.trimToSize();
if ( !(typedefParsingStack.empty()) && ((Boolean)typedefParsingStack.peek()).booleanValue() )
      {
         typedefParsingStack.pop();
      }
{if ("" != null) return new InitDeclaratorList(n0,n1);}
    throw new Error("Missing return statement in function");
}

  static final public InitDeclarator InitDeclarator() throws ParseException {Declarator n0;
   NodeOptional n1 = new NodeOptional();
   NodeSequence n2;
   NodeToken n3;
   Token n4;
   Initializer n5;
    n0 = Declarator();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 59:{
n2 = new NodeSequence(2);
      n4 = jj_consume_token(59);
n3 = JTBToolkit.makeNodeToken(n4);
n2.addNode(n3);
      n5 = Initializer();
n2.addNode(n5);
n1.addNode(n2);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
{if ("" != null) return new InitDeclarator(n0,n1);}
    throw new Error("Missing return statement in function");
}

  static final public StructDeclaration StructDeclaration() throws ParseException {SpecifierQualifierList n0;
   StructDeclaratorList n1;
   NodeToken n2;
   Token n3;
    n0 = SpecifierQualifierList();
    n1 = StructDeclaratorList();
    n3 = jj_consume_token(55);
n2 = JTBToolkit.makeNodeToken(n3);
{if ("" != null) return new StructDeclaration(n0,n1,n2);}
    throw new Error("Missing return statement in function");
}

  static final public SpecifierQualifierList SpecifierQualifierList() throws ParseException {NodeChoice n0;
   NodeSequence n1;
   TypeSpecifier n2;
   NodeOptional n3 = new NodeOptional();
   SpecifierQualifierList n4;
   NodeSequence n5;
   TypeQualifier n6;
   NodeOptional n7 = new NodeOptional();
   SpecifierQualifierList n8;
    if (jj_2_15(1)) {
n1 = new NodeSequence(2);
      n2 = TypeSpecifier();
n1.addNode(n2);
      if (jj_2_13(2147483647)) {
        n4 = SpecifierQualifierList();
n3.addNode(n4);
      } else {
        ;
      }
n1.addNode(n3);
n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VOLATILE:
      case CONST:{
n5 = new NodeSequence(2);
        n6 = TypeQualifier();
n5.addNode(n6);
        if (jj_2_14(2147483647)) {
          n8 = SpecifierQualifierList();
n7.addNode(n8);
        } else {
          ;
        }
n5.addNode(n7);
n0 = new NodeChoice(n5, 1);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return new SpecifierQualifierList(n0);}
    throw new Error("Missing return statement in function");
}
